syntax = "proto2";
package dhc;

//using index player_guid 0
//using load player_guid

message pet_t {
    optional uint64 guid                    = 1;
    optional uint64 player_guid             = 2;
    optional int32 level                    = 3;
    optional int32 exp                      = 4;
    optional int32 template_id              = 5;
    optional int32 enhance                  = 6;
}
